Fix animations